Adding classes to shaders and postprocessing

--- a/xss/production/test/wgl_icosahedron.html
+++ b/xss/production/test/wgl_icosahedron.html
@@ -72,6 +72,7 @@ application.events = new ev.EventHolder();
     // --------RESOURCES---------
 renderer.setSize( app_width, app_height );
 var manager = new threejs.Manager(scene, renderer, streamer, canvas_position);
+var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
 function render() {
 manager.canvas_position = getElementPosition(renderer.domElement);
