--- a/xss/production/test/wgl_shader_cl.html
+++ b/xss/production/test/wgl_shader_cl.html
@@ -140,6 +140,7 @@ application.events = new ev.EventHolder();
     // --------RESOURCES---------
 renderer.setSize( app_width, app_height );
 var manager = new threejs.Manager(scene, renderer, streamer, canvas_position);
+var three_utils = new threejs.Utils();
 manager.events = new ev.EventHolder();
 function render() {
 manager.canvas_position = getElementPosition(renderer.domElement);
@@ -179,14 +180,14 @@ var shader_mat1;var shader_mat2;var camera_1;var cube_1;var plane_1;
 		fragmentShader: document.getElementById( "fragmentShader_my_material1" ).textContent
 		});
         var this__ = my_material1;
-            my_material1.uniforms.time.value = "null";
-            my_material1.uniforms.resolution.value = "null";
-            my_material1.uniforms.texture.value = "null";
 		if(my_material1 instanceof THREE.Object3D)
 			manager.scene.add(my_material1);
-		my_material1.manager = manager;
-        return my_material1;
-        }
+		my_material1.manager = manager;        
+            my_material1.uniforms.time.value = undefined;
+            my_material1.uniforms.resolution.value = undefined;
+            texture_shader_setter(my_material1, 'undefined', my_material1.uniforms.texture);
+		return my_material1;
+			}
     function create_my_material2(
     color,wireframe,wireframe_linewidth,src,texture_object,shading,vertex_colors,env_map,combine,reflectivity,shininess,specular,transparent,refraction_ratio,ambient,blending,emissive,depth_test,skinning,morph_targets,fog,morph_normals,lights ) { 
     var my_material2;
@@ -205,13 +206,13 @@ var shader_mat1;var shader_mat2;var camera_1;var cube_1;var plane_1;
 		fragmentShader: document.getElementById( "fragmentShader_my_material2" ).textContent
 		});
         var this__ = my_material2;
-            my_material2.uniforms.time.value = "null";
-            my_material2.uniforms.resolution.value = "null";
 		if(my_material2 instanceof THREE.Object3D)
 			manager.scene.add(my_material2);
-		my_material2.manager = manager;
-        return my_material2;
-        }
+		my_material2.manager = manager;        
+            my_material2.uniforms.time.value = undefined;
+            my_material2.uniforms.resolution.value = undefined;
+		return my_material2;
+			}
 threejs_load_resources(manager, function()
 {
 			    shader_mat1 = 
@@ -236,6 +237,11 @@ cube_1.manager = manager;
 	    manager.scene.add(plane_1);
 		plane_1.events = new ev.EventHolder();
 plane_1.manager = manager;
+            shader_mat1.uniforms.time.value = 1;
+            shader_mat1.uniforms.resolution.value = three_utils.vector2(0,0);
+            texture_shader_setter(shader_mat1, 'images/disturb.jpg', shader_mat1.uniforms.texture);
+            shader_mat2.uniforms.time.value = 1;
+            shader_mat2.uniforms.resolution.value = three_utils.vector2(0,0);
             manager.events.addListener('update', function(){camera_1.lookAt(scene.position)});
             camera_1.position.y = 150;
             camera_1.position.z = 500;
@@ -251,19 +257,6 @@ plane_1.manager = manager;
             application.window_half_x = app_width / 2;
             application.window_half_y = app_height / 2;
             application.is_mouse_down = false;
-	application.events.addListener("update", function()
-	{    
-		shader_mat1.uniforms.resolution.value.x = app_width;
-shader_mat1.uniforms.resolution.value.y = app_height;
-shader_mat2.uniforms.resolution.value.x = app_width;
-shader_mat2.uniforms.resolution.value.y = app_height;
-shader_mat1.uniforms.time.value += 0.0500000007;
-shader_mat2.uniforms.time.value += 0.0199999996;
-set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
-set_rotation_y(plane_1.rotation, get_rotation_y(cube_1.rotation));
-set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
-	}
-	);
 	application.events.addListener("mousedown", function(x,y)
 	{    
 		application.mouse_x_on_mouse_down = x - application.window_half_x;
@@ -278,6 +271,19 @@ application.y_target_rotation_on_mouse_down = application.y_target_rotation;
 application.x_target_rotation = application.x_target_rotation_on_mouse_down + (application.mouse_x - application.mouse_x_on_mouse_down) * 0.300000012;
 application.mouse_y = y - application.window_half_y;
 application.y_target_rotation = application.y_target_rotation_on_mouse_down + (application.mouse_y - application.mouse_y_on_mouse_down) * 0.300000012;
+	}
+	);
+	application.events.addListener("update", function()
+	{    
+		shader_mat1.uniforms.resolution.value.x = app_width;
+shader_mat1.uniforms.resolution.value.y = app_height;
+shader_mat2.uniforms.resolution.value.x = app_width;
+shader_mat2.uniforms.resolution.value.y = app_height;
+shader_mat1.uniforms.time.value = shader_mat1.uniforms.time.value + 0.0500000007;
+shader_mat2.uniforms.time.value = shader_mat2.uniforms.time.value + 0.0199999996;
+set_rotation_y(cube_1.rotation, get_rotation_y(cube_1.rotation) + (application.x_target_rotation - get_rotation_y(cube_1.rotation)) * 0.200000003);
+set_rotation_y(plane_1.rotation, get_rotation_y(cube_1.rotation));
+set_rotation_x(cube_1.rotation, get_rotation_x(cube_1.rotation) + (application.y_target_rotation - get_rotation_x(cube_1.rotation)) * 0.200000003);
 	}
 	);
 var event_manager = new ev.ThreeEventManager();
