Adding collada model loader

--- a/xss/production/test/wgl_text.html
+++ b/xss/production/test/wgl_text.html
@@ -17,7 +17,6 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
-            <script type="text/javascript" src="../js/three/fonts.js"></script>
             <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
             <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
             <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
@@ -27,6 +26,8 @@
             <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
             <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
             <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
+            <script type="text/javascript" src="../js/three/loaders/ColladaLoader.js"></script>
+            <script type="text/javascript" src="../js/three/fonts.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
