--- a/xss/production/test/wgl_collada.html
+++ b/xss/production/test/wgl_collada.html
@@ -6,7 +6,7 @@
 <body>
 <style type="text/css">
 	body{
-	background:#356;
+	background:black;
 	}
 </style>
             <script type="text/javascript" src="../js/resig.js"></script>
@@ -18,16 +18,7 @@
             <script type="text/javascript" src="../js/three/Stats.js"></script>
             <script type="text/javascript" src="../js/three/Utils.js"></script>
             <script type="text/javascript" src="../js/three/Detector.js"></script>
-            <script type="text/javascript" src="../js/three/fonts.js"></script>
-            <script type="text/javascript" src="../js/three/ShaderExtras.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/EffectComposer.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/RenderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/ShaderPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/BloomPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/FilmPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/DotScreenPass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/TexturePass.js"></script>
-            <script type="text/javascript" src="../js/three/postprocessing/MaskPass.js"></script>
+            <script type="text/javascript" src="../js/three/loaders/ColladaLoader.js"></script>
 <script type="text/javascript">	
 if ( ! Detector.webgl ) Detector.addGetWebGLMessage();
 			var renderer = new THREE.WebGLRenderer( { antialias: false } );
@@ -50,8 +41,8 @@ application.events = new ev.EventHolder();
                 global_package.add_item(
             {
 		id:				"model_1",
-		resource_type:	RESOURCE_JSON_MODEL,
-		src:			"model/monster/monster.js",
+		resource_type:	RESOURCE_COLLADA_MODEL,
+		src:			"model/monster/monster.dae",
 		frame_width:	null,
 		frame_height:	null,
 		animations:		[]
@@ -90,11 +81,11 @@ manager.events.dispatch("update", [g_delta, g_elapsed]);
 				set_active_camera(camera_1);
 application.events.dispatch("switch_cameras", []);
 }
-var material_wireframe;var camera_1;var a_ligth;var d_ligth_1;var monster_model;var plane_1;
+var material_wireframe;var camera_1;var a_ligth;var d_ligth_1;var light1;var light2;var light3;var monster_model;var plane_1;
 threejs_load_resources(manager, function()
 {
 material_wireframe = new THREE.MeshBasicMaterial({
-color:blanchedalmond,wireframe:true,
+color:grey,
 	});
 material_wireframe.manager = manager;
 		    camera_1 = 
@@ -109,16 +100,28 @@ a_ligth.manager = manager;
 	    new THREE.DirectionalLight(16772829, 1, 0, null) ;
 	    manager.scene.add(d_ligth_1);
 d_ligth_1.manager = manager;
+	    light1 = 
+	    new THREE.PointLight(Yellow, 4, 0) ;
+	    manager.scene.add(light1);
+light1.manager = manager;
+	    light2 = 
+	    new THREE.PointLight(Red, 4, 0) ;
+	    manager.scene.add(light2);
+light2.manager = manager;
+	    light3 = 
+	    new THREE.PointLight(Green, 4, 0) ;
+	    manager.scene.add(light3);
+light3.manager = manager;
 	monster_model = new THREE.Object3D();
 	var monster_model_loader = 
 	generate_model_loader(manager.streamer.get_resource('model_1').type);
+	monster_model_loader.options.convertUpAxis = true;	
 		monster_model_loader.load(
-				manager.streamer.get_resource('model_1').asset , function( geometry )
+				manager.streamer.get_resource('model_1').asset , function colladaReady( collada )
 			{
-				var monster_model_mesh = new THREE.Mesh(geometry, new THREE.MeshFaceMaterial());
-				monster_model.add(monster_model_mesh);
-				
-            monster_model.position.x = -110;
+				monster_model = collada.scene;
+				monster_model.skin = collada.skins[0];				
+            monster_model.position.x = -350;
             monster_model.position.y = -350;
             monster_model.position.z = -350;
             monster_model.scale.x = 0.5;
@@ -134,18 +137,42 @@ monster_model.manager = manager;
 	    manager.scene.add(plane_1);
 		plane_1.events = new ev.EventHolder();
 plane_1.manager = manager;
-            manager.events.addListener('update', function(){camera_1.lookAt(monster_model.position)});
+            set_material_alpha(material_wireframe, 20);
+            manager.events.addListener('update', function(){camera_1.lookAt(scene.position)});
             camera_1.position.z = 1000;
             d_ligth_1.position.y = -70;
             d_ligth_1.position.z = 100;
             plane_1.position.y = -500;
             application.mouse_x = null;
             application.mouse_y = null;
-	application.events.addListener("update", function()
+            application.t = 0;
+	application.events.addListener("update", function(delta,elapsed)
 	{    
-		camera_1.position.x = camera_1.position.x + (application.mouse_x - camera_1.position.x) * 0.0500000007;
+		var time = elapsed * 0.000500000024;
+camera_1.position.x = camera_1.position.x + (application.mouse_x - camera_1.position.x) * 0.0500000007;
 camera_1.position.y = camera_1.position.y + (-application.mouse_y - camera_1.position.y) * 0.0500000007;
-set_rotation_y(monster_model.rotation, get_rotation_y(monster_model.rotation) + 1);
+light1.position.x = Math.sin(time * 7) * 3009;
+light1.position.y = Math.cos(time * 5) * 4000;
+light1.position.z = Math.cos(time * 3) * 3009;
+light2.position.x = Math.sin(time * 3) * 3009;
+light2.position.y = Math.cos(time * 5) * 4000;
+light2.position.z = Math.cos(time * 7) * 3009;
+light3.position.x = Math.sin(time * 7) * 3009;
+light3.position.y = Math.cos(time * 3) * 4000;
+light3.position.z = Math.cos(time * 5) * 3009;
+if (application.t > 30)
+{
+application.t = 0;
+}
+if (monster_model.skin)
+{
+for(var i = 0; i < monster_model.skin.morphTargetInfluences.length; i++)
+{
+monster_model.skin.morphTargetInfluences[ i ] = 0;
+		}
+		monster_model.skin.morphTargetInfluences[ Math.floor( application.t ) ] = 1;
+application.t = application.t + 0.5;
+}
 	}
 	);
 	application.events.addListener("mousemove", function(x,y)
